HUDF-38 fixed control buttons css based on firefox

--- a/FJSHUD/app/styles/notification.less
+++ b/FJSHUD/app/styles/notification.less
@@ -55,7 +55,8 @@
 .CallStatusContainerOutbound{  
    .CallStatusIconContainer,
    .CallStatusText{
-    float: left;             
+    float: left;  
+    margin: 5px 0px 5px 5px;           
    }
     
    .CallStatusText{
@@ -63,20 +64,16 @@
         font-weight: bold;
         cursor: pointer;
         display:inline-block;
-        clear: none;
-        top: 5px;
-        left: 10px; 
-        margin-bottom: 5px;                   
-                
+        clear: none;        
+        margin-left: 10px;                       
+                        
         .callStatus{
             font-size: 12px;
         }
    }
-   .CallStatusIconContainer{      
-       margin: 5px 0px 5px 5px;
-      
-   }
+   
    .controlButtons{
+        clear: both;
         float: right;
         display: inline-block;
         margin-top: 5px;
